[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Bar/Bar.gd" type="Script" id=1]
[ext_resource path="res://UI/Bar/border.png" type="Texture" id=2]

[node name="Bar" type="ColorRect"]
margin_right = 100.0
margin_bottom = 5.0
rect_min_size = Vector2( 100, 6 )
size_flags_horizontal = 0
color = Color( 0.184314, 0.184314, 0.184314, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
secondary_color = Color( 1, 1, 0.843137, 1 )

[node name="BarColorSecondary" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.980392, 0.784314, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarColorPrimary" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.109804, 0.109804, 1 )

[node name="BarBoder" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
